--- a/src/TaskbarUtil.csproj
+++ b/src/TaskbarUtil.csproj
@@ -2,20 +2,20 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net8.0-windows</TargetFramework>
+    <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <UseWindowsForms>false</UseWindowsForms>
-    <RuntimeIdentifier>win-x64</RuntimeIdentifier>
+    <!-- RuntimeIdentifier is now specified via build command only -->
     <AssemblyName>taskbarutil</AssemblyName>
     <Product>TaskbarUtil</Product>
     <Description>A command line utility for managing Windows taskbar pins</Description>
-    <Version>1.0.0</Version>
     <Authors>WindowsAdmins</Authors>
     <Copyright>Copyright © 2025 WindowsAdmins</Copyright>
     <PackageProjectUrl>https://github.com/windowsadmins/taskbarutil</PackageProjectUrl>
     <RepositoryUrl>https://github.com/windowsadmins/taskbarutil</RepositoryUrl>
     <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
+    <IncludeSourceRevisionInInformationalVersion>false</IncludeSourceRevisionInInformationalVersion>
   </PropertyGroup>
 
   <ItemGroup>
